--- a/my-portfolio/styles/globals.css
+++ b/my-portfolio/styles/globals.css
@@ -1,3 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .nav-link{
+        @apply relative font-semibold text-white cursor-pointer text-[17px]
+ w-fit md:block after:block after:content-[''] 
+ after:absolute after:h-[3px] after:bg-yellow-400 
+ after:w-full after:scale-x-0 
+ after:hover:scale-x-100 after:transition 
+ after:duration-300 after:origin-center hidden   
+}
+}
+
+/* @layer components {
+    .nav-link {
+        @apply relative font-semibold text-white cursor-pointer text-[17px] 
+        w-fit md:block after:block after:content-[''] 
+        after: absolute after:h-[3px] after:bg-yellow-400 
+        after:w-full after:scale-x-0 
+        after:hover:scale-x-100 after:transition 
+        after:duration-300 after:origin-center hidden
+    }
+
+} */
